fix small stack overflow icon in navbar when logged out. Fix session form being left (instead of centered). Rerouted routes to include auth and protected routes in app.jsx

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,9 +54,7 @@
  .app-middle {
     display: flex; 
     flex: 5 0 0; 
-    // justify-content: stretch; 
-    //  align-items: stretch; 
-    //  justify-content: stretch; 
+    justify-content: center; 
  }
 
  html, body {
