--- a/app/assets/stylesheets/components/user/auth/session_form.scss
+++ b/app/assets/stylesheets/components/user/auth/session_form.scss
@@ -16,6 +16,7 @@
     justify-content: center; 
     align-items: center; 
     box-sizing: border-box; 
+    box-shadow: 2px 1px 10px $box-shadow;
 }
 
 .session_form-title {
