--- a/app/assets/stylesheets/components/user/navbar/navbar.scss
+++ b/app/assets/stylesheets/components/user/navbar/navbar.scss
@@ -86,3 +86,8 @@
     color: $white; 
     font-size: 1rem; 
 }
+
+.nav-pic-logged-out {
+    font-size: 1.5rem; 
+    padding-left: 0.5rem; 
+}
